--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 beautifulsoup4
-git+https://github.com/pandazxx/homura.git#egg-homura
+git+https://github.com/pandazxx/homura.git#egg=homura
 humanize
 requests
 six
